# wontfix-research

./: .gitignore  pyproject.toml
data/: issues.csv  pulls.csv  repos.csv
data/raw/: status: wontfix.csv  wont fix.csv  wont-fix.csv  wontfix.csv
notebooks/: 02-repo-scan.ipynb  03-create-training-dataset.ipynb  04-train-llama.ipynb  04-train-model.ipynb  05-train-mistral.ipynb  06-train-deepseek.ipynb  README.md  repository-scan.ipynb  setup.ipynb
